--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,26 +1,51 @@
-<form [formGroup]="mioForm">
+<div class="flex">
+<form class="modulo" [formGroup]="mioForm">
 
   <mat-form-field class="example-full-width">
     <input matInput placeholder="Nome" formControlName="nome">
-  </mat-form-field>
+    </mat-form-field>
+  <span *ngIf="nome.invalid && (nome.dirty || nome.touched)">
+    <span *ngIf="nome.errors.minlength">Scrivi almeno 2 caratteri</span>
+     <span *ngIf="nome.errors.required">Inserisci nome</span></span>
 
 <mat-form-field class="example-full-width">
     <input matInput placeholder="Cognome" formControlName="cognome">
-  </mat-form-field>
+   </mat-form-field>
+   <span *ngIf="cognome.invalid && (cognome.dirty || cognome.touched)">
+    <span *ngIf="cognome.errors.minlength">Scrivi almeno 5 caratteri</span>
+    <span *ngIf="cognome.errors.required">Inserisci cognome</span></span>
 
-   <mat-form-field class="example-full-width">
+ 
+  <mat-form-field class="example-full-width">
     <input matInput placeholder="Citta" formControlName="citta">
-  </mat-form-field>
+   </mat-form-field>
+   <span *ngIf="citta.invalid && (citta.dirty || citta.touched)">
+    <span *ngIf="citta.errors.minlength">Scrivi almeno 5 caratteri</span>
+    <span *ngIf="citta.errors.required">Inserisci citta</span></span>
 
+    <mat-form-field class="example-full-width">
+    <input matInput placeholder="Email" formControlName="mail">
+    </mat-form-field>
+  <span *ngIf="mail.invalid && (mail.dirty || mail.touched)">
+    <span *ngIf="mail.errors.required">Inserire mail</span>
+    <span *ngIf="mail.errors.email">Mail non corretta</span></span>
+
+  
+  
   <mat-form-field>
-  <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+  <input id="date" matInput [matDatepicker]="picker" placeholder="Choose a date">
   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
   <mat-datepicker #picker></mat-datepicker>
 </mat-form-field>
+
+
+
 </form>
+</div>
+<div id="tempo">
 <h2>Risultato in tempo reale:</h2>
 <p>Nome inserito:{{this.mioForm.value.nome}}</p>
 <p>Cognome inserito:{{this.mioForm.value.cognome}}</p>
 <p>Citta inserita:{{this.mioForm.value.citta}}</p>
-
-
+<p>Mail inserita:{{this.mioForm.value.mail}}</p>
+</div>
